# eflips-eval

./: .pre-commit-config.yaml  README.md  draw_depot_layout.py  pyproject.toml
.github/workflows/: lint.yml  on_push.yml  pypi-version-check.yml  release.yml  unittests.yml
doc/: conf.py  index.rst  requirements.txt
eflips/eval/: data_preparation.py  visualization.py
eflips/eval/input/: prepare.py  route_options.py  routing.py  visualize.py
eflips/eval/output/: map_util.py  prepare.py  util.py  visualize.py
examples/: playground.ipynb  playground.py
tests/: base.py  test_input.py  test_output.py
